--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ build-backend = "hatchling.build"
 dev = [
     "mypy>=1.15.0",
     "pytest>=8.3.5",
+    "pytest-asyncio>=0.25.3",
     "pytest-cov>=6.0.0",
     "ruff>=0.11.0",
 ]
