--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
 mypy_path = src,tests
-namespace_packages = True
-explicit_package_bases = True
+namespace_packages = False
+explicit_package_bases = False
 show_error_codes = True
 python_version = 3.9
