--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,7 +63,7 @@ jobs:
         run: make install-dev
 
       - name: Run tests for coverage
-        run: make test-w-coverage cov_report=xml
+        run: make test-w-coverage-junit
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
@@ -76,6 +76,11 @@ jobs:
           # flags: unittests
           # name: codecov-umbrella
           verbose: true
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   doctests:
     # This action runs doctests for coverage collection and uploads them to codecov.io.
