--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,15 @@ jobs:
           version: ${{ env.UV_VERSION }}
           enable-cache: true
 
+      # ---------------------------------------------
+      #  -----  prepare Readme
+      # ---------------------------------------------
+
+      - name: Prepare README.md
+        run: |
+          uv run scripts/transform_readme.py --target pypi
+          cat README.md
+
       #----------------------------------------------
       #  -----  build distribution -----
       #----------------------------------------------
